test/Fail/Unknown-name-in-polarity-pragma.agda
{-# OPTIONS --warning=error #-}

{-# POLARITY F #-}
